# KONA-1.0

./: CMakeLists.txt  COPYRIGHT  README  install.sh
app/user/: CMakeLists.txt
include/app/user/: gcge_app_csr.h
src/core/: CMakeLists.txt
src/eigsol/: CMakeLists.txt
src/lapack/: CMakeLists.txt  Makefile
src/lapack/extension/: CMakeLists.txt
src/linsol/: CMakeLists.txt
test/user/: CMakeLists.txt  kona_user_ops.c
